--- a/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
+++ b/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
@@ -51,23 +51,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PROBLEM\n",
-    "Add a chart showing the year-over-year growth rate of retail sales "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
     "### ... and Uncertainty Could Induce A Drop In Consumption ...  \n",
     "Increased \"uncertainty\" has become a popular explanation of much of what happened in the Great Recession -- including this drop.  Qualitatively, it is well known that a perceived increase in labor income uncertainty should induce more saving (less consumption) for precautionary reasons.\n",
     "\n",
@@ -95,8 +78,7 @@
    "metadata": {
     "code_folding": [
      1
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -140,9 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now we import the class itself and make a baseline type."
    ]
@@ -150,9 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from HARK.ConsumptionSaving.ConsIndShockModel import IndShockConsumerType\n",
@@ -161,9 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "For this exercise, we will introduce _ex ante_ heterogeneity, so the baseline type will be copied several times.\n",
     "\n",
@@ -176,8 +152,7 @@
    "metadata": {
     "code_folding": [
      0
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -194,9 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now we can give each of the consumer types their own discount factor. (This distribution of parameters was estimated in the paper [\"The Distribution of Wealth and the Marginal Propensity to Consume\" by Carroll, Slacalek, Tokuoka, and White (2017) (cstwMPC)](http://econ.jhu.edu/people/ccarroll/papers/cstwMPC).  "
    ]
@@ -207,8 +180,7 @@
    "metadata": {
     "code_folding": [
      0
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -227,9 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Our agents now exist and have a concept of the problem they face, but we still need them to solve that problem.\n",
     "\n",
@@ -242,8 +212,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
@@ -275,9 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "With all of that setup taken care of, let's write some functions to run our counterfactual exercise and extract the information we want.\n",
     "\n",
@@ -288,7 +257,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "hidden": true
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -310,9 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now let's create a function to run the experiment we want -- change income uncertainty, and see how consumption changes.\n",
     "To keep the code block below (mostly) clean, we'll describe the procedure below step by step here, with accompanying annotations in the codeblock.\n",
@@ -334,8 +303,7 @@
    "metadata": {
     "code_folding": [
      0
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -391,9 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Our counterfactual experiment function takes three inputs-- consumer types, counterfactual values, and the name of the parameter we want to change. For the sake of convenience, let's define small functions to run the experiment for each parameter with just a single input."
    ]
@@ -404,8 +370,7 @@
    "metadata": {
     "code_folding": [
      0
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -422,9 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now we can finally run our experiment.  In the cell below, we generate a plot of the change in aggregate consumption vs the (underlying) standard deviation of permanent income shocks."
    ]
@@ -433,7 +396,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "hidden": true
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
@@ -487,8 +452,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "source": [
     "The figure shows that if people's beliefs about the standard deviation of permanent shocks to their incomes had changed from 0.06 (the default value) to about 0.095, the model would predict an immediate drop in consumption spending of about the magnitude seen in 2008.  \n",
@@ -502,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PROBLEM\n",
+    "### PROBLEM\n",
     "\n",
     "Compute the change in transitory uncertainty and of unemployment risk that would be sufficient to make consumption fall by the appropriate amount (by making a figure similar to the one above). Brifely explain your results in intuitive terms."
    ]
@@ -536,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   },
   "varInspector": {
    "cols": {
