--- a/notebooks/BufferStockTheory-Problems.ipynb
+++ b/notebooks/BufferStockTheory-Problems.ipynb
@@ -183,7 +183,6 @@
     "    # print(f\"Saving figure {figure_name} in {target_dir}\")\n",
     "    if saveFigs:\n",
     "        plt.savefig(os.path.join(target_dir, f'{figure_name}.png')) # For web/html\n",
-    "        plt.savefig(os.path.join(target_dir, f'{figure_name}.jpg')) # Useful to make versions \n",
     "        plt.savefig(os.path.join(target_dir, f'{figure_name}.pdf')) # For LaTeX\n",
     "        plt.savefig(os.path.join(target_dir, f'{figure_name}.svg')) # For html5\n",
     "    if not in_ipynb():\n",
@@ -591,7 +590,21 @@
     ],
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[array([0.14285714, 0.14285714, 0.14285714, 0.14285714, 0.14285714,\n",
+       "         0.14285714, 0.14285714]),\n",
+       "  array([0.85043016, 0.91862319, 0.95908471, 0.99506599, 1.03241349,\n",
+       "         1.0779763 , 1.16640616])]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Construct the \"GIC fails\" example.\n",
     "\n",
@@ -615,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "code_folding": [
      0
@@ -659,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "code_folding": [
      0
@@ -680,10 +693,55 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
-    "heading_collapsed": true
+    "scrolled": true
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.85043016, 0.91862319, 0.95908471, 0.99506599, 1.03241349,\n",
+       "       1.0779763 , 1.16640616])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "InvPermShkDstn=deepcopy(GICFailExample.PermShkDstn)\n",
+    "InvPermShkDstn[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[array([0.14285714, 0.14285714, 0.14285714, 0.14285714, 0.14285714,\n",
+       "         0.14285714, 0.14285714]),\n",
+       "  array([0.85043016, 0.91862319, 0.95908471, 0.99506599, 1.03241349,\n",
+       "         1.0779763 , 1.16640616])]]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GICFailExample.PermShkDstn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### PROBLEM: Target Wealth and Impatience\n",
     "\n",
@@ -696,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "code_folding": [
      0
@@ -763,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "code_folding": [
      0
@@ -801,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "code_folding": [
      0
@@ -838,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "code_folding": [
      0
@@ -868,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "code_folding": [
      0
@@ -961,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "code_folding": [
      0
@@ -1039,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "code_folding": [
      0
@@ -1061,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "code_folding": [
      0
@@ -1138,8 +1196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
+    "code_folding": [
+     0
+    ],
     "lines_to_next_cell": 2
    },
    "outputs": [
@@ -1197,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "code_folding": [
      0
