Update and change name of PerfForesightCRRA-Impatience to add -Problems

--- a/notebooks/PerfForesightCRRA-Impatience-Problems.ipynb
+++ b/notebooks/PerfForesightCRRA-Impatience-Problems.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "\n",
     "\n",
-    "[PerfectForesightCRRA](http://www.econ2.jhu.edu/people/ccarroll/public/lecturenotes/Consumption/PerfForesightCRRA) defines several 'impatience' conditions that are useful in understanding the model.  We will use here the HARK toolkit's solution to the permanent-income-normalized version of the model, constructing a consumption function for the ratio of consumption to permanent income.\n",
+    "[PerfectForesightCRRA](http://www.econ2.jhu.edu/people/ccarroll/public/lecturenotes/Consumption/PerfForesightCRRA) defines several 'impatience' conditions that are useful in understanding the model.  We will use here the HARK toolkit's solution to the permanent-income-normalized version of the model, which constructs a consumption function for the ratio of consumption to permanent income.\n",
     "\n",
     "The handout claims that in order for the perfect foresight consumption model to be useful, it is necessary to impose\n",
     "the 'return impatience condition' (RIC):\n",
@@ -62,7 +62,7 @@
     "  \\frac{(R \\beta)^{1/\\rho}}{R} & < & 1\n",
     "\\end{eqnarray}\n",
     "\n",
-    "and defines some other inequalities that help characterize what happens in the model (or whether it has a solution at all).\n",
+    "and defines some other similar inequalities that help characterize what happens in the model (or whether it has a solution at all).\n",
     "\n",
     "This question asks you to explore numerically what happens to the consumption function as these conditions get close to failing.\n",
     "\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now create a perfect foresight consumer example\n",
+    "# Now create a perfect foresight consumer example, \n",
     "PFagent = PerfForesightConsumerType(**Params.init_perfect_foresight)\n",
     "PFagent.cycles = 0 # We need the consumer to be infinitely lived\n",
     "PFagent.LivPrb = [1.0] # Suppress the possibility of dying\n",
@@ -239,7 +239,7 @@
     "    plt.plot(m_range, cHARK, label='Consumption Function, $\\\\beta$= '+str(PFagent.DiscFac))\n",
     "\n",
     "PFagent.DiscFac = Params.DiscFac # return discount factor to default value\n",
-    "PFagent.solve() # It's nice to leave the PFagent back with its default solution\n",
+    "PFagent.solve() # It's polite to leave the PFagent back with its default solution\n",
     "plt.xlabel('Market resources m') # x axis label\n",
     "plt.ylabel('Consumption c')      # y axis label\n",
     "plt.legend()                     # show legend\n",
@@ -254,13 +254,7 @@
    "source": [
     "# Now plot the consumption functions for alternate values of G as described above\n",
     "# Note the tricky fact that PermGroFac is a list of values because it could \n",
-    "# be representing some arbitrary sequence of growth rates\n",
-    "# QUESTION: What is the upper bound for possible values of G?  Why?\n",
-    "\n",
-    "PermGro_min = PermGroFac[0]\n",
-    "PermGro_max = Rfree # Arbitrary number larger than the default value\n",
-    "PermGroArray = np.linspace(PermGro_min, PermGro_max, numPoints, endpoint=True)\n",
-    "PermGroList = PermGroArray.tolist() # Make growth factors a list\n"
+    "# be representing some arbitrary sequence of growth rates"
    ]
   },
   {
@@ -269,6 +263,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# PROBLEM: What is the upper bound for possible values of G?  Why?\n",
+    "\n",
+    "PermGro_min = PermGroFac[0]\n",
+    "PermGro_max = PermGro_min # Replace with correct answer\n",
+    "PermGroArray = np.linspace(PermGro_min, PermGro_max, numPoints, endpoint=True)\n",
+    "PermGroList = PermGroArray.tolist() # Make growth factors a list\n",
+    "\n",
+    "# Copy and modify the code above for plotting the consumption functions (starting with plt.figure(figsize=...))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PROBLEM: \n",
     "# Now plot the consumption functions for values of rho above the default value"
    ]
   }
@@ -289,9 +300,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
