--- a/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
+++ b/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Micro- and Macroeconomic Implications of Very Impatient Households"
+    "# Micro- and Macroeconomic Implications of Very Impatient Households\n",
+    "\n",
+    "<p style=\"text-align: center;\"><small><small><small>Generator: QuARK-make/notebooks_byname</small></small></small></p>"
    ]
   },
   {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      25
@@ -59,11 +61,8 @@
    "source": [
     "# This cell does some setup and imports generic tools used to produce the figures\n",
     "\n",
-    "import sys \n",
-    "import os\n",
-    "sys.path.insert(0, os.path.abspath('../lib'))\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "from util import log_progress\n",
     "import numpy as np\n",
     "from copy import deepcopy\n",
     "\n",
@@ -256,35 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "275fa015fab547639e57f057b43d38e9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value=''), IntProgress(value=0, max=7)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The given type violates the absolute impatience condition with the supplied parameter values; the AIF is 1.00032 \n",
-      "The given type violates the absolute impatience condition with the supplied parameter values; the AIF is 1.00277 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Progress bar keeps track interactively of how many have been made\n",
-    "for ThisType in log_progress(MyTypes, every=1):\n",
+    "for ThisType in tqdm(MyTypes):\n",
     "    ThisType.solve()\n",
     "    ThisType.initializeSim()\n",
     "    ThisType.simulate()"
@@ -511,14 +487,8 @@
  ],
  "metadata": {
   "jupytext": {
-   "cell_metadata_filter": "collapsed",
-   "formats": "ipynb,py:percent",
-   "text_representation": {
-    "extension": ".py",
-    "format_name": "percent",
-    "format_version": "1.1",
-    "jupytext_version": "0.8.3"
-   }
+   "cell_metadata_filter": "collapsed,code_folding",
+   "formats": "ipynb,py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -535,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -586,5 +556,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
