--- a/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
+++ b/notebooks/Nondurables-During-Great-Recession-Problems.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spending on Nondurables During the Great Recession"
+    "# Spending on Nondurables During the Great \n",
+    "\n",
+    "<p style=\"text-align: center;\"><small><small><small>Generator: QuARK-make/notebooks_byname</small></small></small></p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
@@ -18,19 +20,12 @@
    "outputs": [],
    "source": [
     "# Initial imports and notebook setup, click arrow to show\n",
-    "%matplotlib inline\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "## Import some things from cstwMPC\n",
     "\n",
-    "# The first step is to be able to bring things in from different directories\n",
-    "import sys \n",
-    "import os\n",
-    "\n",
-    "# Let python find any useful library files\n",
-    "sys.path.insert(0, os.path.abspath('../lib'))\n",
-    "\n",
-    "from util import log_progress\n",
+    "from tqdm import tqdm\n",
     "\n",
     "import numpy as np\n",
     "from copy import deepcopy\n",
@@ -210,31 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "lines_to_next_cell": 1
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74f9bd71dcc644569b4d9ecc1c78a8bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value=''), IntProgress(value=0, max=7)))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# log_progress presents a pretty bar that interactively shows how far the calculations have gotten\n",
-    "for ConsumerType in log_progress(ConsumerTypes, every=1):\n",
+    "# tqdm presents a pretty bar that interactively shows how far the calculations have gotten\n",
+    "for ConsumerType in tqdm(ConsumerTypes):\n",
     "    ## We configured their discount factor above.  Now solve\n",
     "    ConsumerType.solve()\n",
     "    \n",
@@ -259,7 +240,8 @@
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -299,11 +281,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -332,7 +315,7 @@
     "    OldAvgC = calcAvgC(OriginalTypes)\n",
     "\n",
     "    # Step 2 (the loop over counterfactual parameter values)\n",
-    "    for NewVal in log_progress(NewVals, every=1):\n",
+    "    for NewVal in tqdm(NewVals):\n",
     "        if ParamToChange in [\"PermShkStd\",\"TranShkStd\"]:\n",
     "            ThisVal = [NewVal]\n",
     "        else:\n",
@@ -370,7 +353,8 @@
    "metadata": {
     "code_folding": [
      0
-    ]
+    ],
+    "lines_to_next_cell": 1
    },
    "outputs": [],
    "source": [
@@ -451,9 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "The figure shows that if people's beliefs about the standard deviation of permanent shocks to their incomes had changed from 0.06 (the default value) to about 0.095, the model would predict an immediate drop in consumption spending of about the magnitude seen in 2008.  \n",
     "\n",
@@ -474,16 +456,8 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,py:percent",
-   "metadata_filter": {
-    "cells": "collapsed"
-   },
-   "text_representation": {
-    "extension": ".py",
-    "format_name": "percent",
-    "format_version": "1.1",
-    "jupytext_version": "0.8.3"
-   }
+   "cell_metadata_filter": "collapsed,code_folding",
+   "formats": "ipynb,py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -500,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   },
   "varInspector": {
    "cols": {
@@ -533,5 +507,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
