Add reproduce.sh command

--- a/notebooks/TractableBufferStock-Interactive-Problems.ipynb
+++ b/notebooks/TractableBufferStock-Interactive-Problems.ipynb
@@ -130,7 +130,6 @@
    "execution_count": 4,
    "metadata": {
     "code_folding": [
-     0,
      3
     ]
    },
@@ -138,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0bc9ab5bc75f43d29652727eb2874a8a",
+       "model_id": "e0e4fc781d3d438ba076221ec28bb724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -306,7 +305,9 @@
     "interact(makeTBSplot,\n",
     "         DiscFac = DiscFac_widget,\n",
     "         CRRA = CRRA_widget,\n",
-    "         Rfree = Rfree_widget,\n",
+    "         # We can fix a parameter using the fixed() operator\n",
+    "         Rfree      = fixed(TBS_dictionary['Rfree']),\n",
+    "#         Rfree = Rfree_widget,   # This is the line which, when uncommented, would make Rfree a slider\n",
     "         PermGroFac = PermGroFac_widget,\n",
     "         UnempPrb = UnempPrb_widget,\n",
     "         mMin = mMin_widget,\n",
@@ -329,7 +330,7 @@
     "\n",
     "Your task is to make a simplified slider that involves only $\\beta$.  \n",
     "\n",
-    "First, create a variable `betaMax` equal to the value of $\\beta$ at which the Growth Impatience Factor is exactly equal to 1 (that is, the consumer is exactly on the border between patience and impatience).  (Hint: The formula for this is [here](http://www.econ2.jhu.edu/people/ccarroll/public/LectureNotes/Consumption/TractableBufferStock/#GIFMax)).\n",
+    "First, create a variable `betaMax` equal to the value of $\\beta$ at which the Growth Impatience Factor is exactly equal to 1 (that is, the consumer is exactly on the border between patience and impatience).  (Hint: The formula for this is [here](http://www.econ2.jhu.edu/people/ccarroll/public/LectureNotes/Consumption/TractableBufferStock/#DiscountMaxGICTBS)).\n",
     "\n",
     "Next, create a slider/'widget' like the one above, but where all variables except $\\beta$ are set to their default values, and the slider takes $\\beta$ from 0.05 below its default value up to `betaMax - 0.01`.  (The numerical solution algorithm becomes unstable when the GIC is too close to being violated, so you don't want to go all the way up to `betaMax.`)\n",
     "\n",
@@ -388,5 +389,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
