Delete irrelveant notebooks

--- a/notebooks/LifeCycleModelExample-Problems.ipynb
+++ b/notebooks/LifeCycleModelExample-Problems.ipynb
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PROBLEM : Consequences of \"Luck\" for Saving (cont)\n",
+    "# PROBLEM : \"Luck\" and Saving (cont)\n",
     "\n",
     "Now we are interested in comparing the people who were \"lucky\" vs those who were \"unlucky\"\n",
     "\n",
