Added pseudo-code to notebook

--- a/notebooks/LifeCycleModelExample-Problems-And-Solutions.ipynb
+++ b/notebooks/LifeCycleModelExample-Problems-And-Solutions.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -390,16 +390,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x23f8cba1860>"
+       "<matplotlib.collections.PathCollection at 0x1a0d60834e0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -442,16 +442,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x23f8a6bbf28>"
+       "<matplotlib.collections.PathCollection at 0x1a0d602d390>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -499,7 +499,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put your solution here"
+    "# 1. Create a list of vigntiles:\n",
+    "vigntiles = [i for i in range(1,100,5)]\n",
+    "\n",
+    "# 12 Create a  (attribute?) in the LifeCyclePop2-object which captures\n",
+    "# the individual's wealth vigntile.\n",
+    "LifeCyclePop2.aVigntile = np.percentileofscore()\n",
+    "\n",
+    "# 2. Loop over a set \n",
+    "\n",
+    "\n",
+    "\n",
+    "aVigntiles = np.percentile(LifeCyclePop2.aLvlNow_hist[41,:], vigntiles)"
    ]
   }
  ],
