--- a/notebooks/LifeCycleModelExample-Problems-And-Solutions.ipynb
+++ b/notebooks/LifeCycleModelExample-Problems-And-Solutions.ipynb
@@ -45,18 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0
     ],
     "lines_to_next_cell": 2
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Params' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-47931b6c0296>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Set up default values for CRRA, DiscFac, and simulation variables in the dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mParams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit_consumer_objects\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"CRRA\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m2.00\u001b[0m            \u001b[0;31m# Default coefficient of relative risk aversion (rho)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mParams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit_consumer_objects\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"DiscFac\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m0.975\u001b[0m         \u001b[0;31m# Default intertemporal discount factor (beta)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mParams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit_consumer_objects\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"PermGroFacAgg\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m1.0\u001b[0m    \u001b[0;31m# Aggregate permanent income growth factor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mParams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit_consumer_objects\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"aNrmInitMean\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m10.0\u001b[0m   \u001b[0;31m# Mean of log initial assets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Params' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Set up default values for CRRA, DiscFac, and simulation variables in the dictionary \n",
     "Params.init_consumer_objects[\"CRRA\"]= 2.00            # Default coefficient of relative risk aversion (rho)\n",
-    "Params.init_consumer_objects[\"DiscFac\"]= 0.97         # Default intertemporal discount factor (beta)\n",
+    "Params.init_consumer_objects[\"DiscFac\"]= 0.975         # Default intertemporal discount factor (beta)\n",
     "Params.init_consumer_objects[\"PermGroFacAgg\"]= 1.0    # Aggregate permanent income growth factor \n",
     "Params.init_consumer_objects[\"aNrmInitMean\"]= -10.0   # Mean of log initial assets \n",
     "Params.init_consumer_objects[\"aNrmInitStd\"]= 1.0      # Standard deviation of log initial assets\n",
@@ -823,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
