--- a/notebooks/LifeCycleModelExample-Problems-And-Solutions.ipynb
+++ b/notebooks/LifeCycleModelExample-Problems-And-Solutions.ipynb
@@ -396,7 +396,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a0d60834e0>"
+       "<matplotlib.collections.PathCollection at 0x29246332208>"
       ]
      },
      "execution_count": 13,
@@ -448,7 +448,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1a0d602d390>"
+       "<matplotlib.collections.PathCollection at 0x292462deb38>"
       ]
      },
      "execution_count": 14,
