Solutions before meeting Hakon

--- a/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
+++ b/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems.ipynb
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-1e6b15bd36ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mnew_sim_wealth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mThisType\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maLvlNow\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mThisType\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mNewTypes\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mnew_dLor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdistanceLorentz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSCF_wealth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSCF_weights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_sim_wealth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevalPctiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m print('\\n The Euclidean distance to the Lorenz curve changed from '  +str(dLor) +' to ' +str(new_dLor) \n\u001b[0;32m     16\u001b[0m       +' indicating a better match to the empirical Lorenz curve.')\n",
+      "\u001b[1;32m<ipython-input-33-2bb1fd777516>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mnew_sim_wealth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mThisType\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maLvlNow\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mThisType\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mNewTypes\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mnew_dLor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdistanceLorentz\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSCF_wealth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSCF_weights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_sim_wealth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mevalPctiles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m print('\\n The Euclidean distance to the Lorenz curve changed from '  +str(dLor) +' to ' +str(new_dLor) \n\u001b[0;32m     16\u001b[0m       +' indicating a better match to the empirical Lorenz curve.')\n",
       "\u001b[1;31mNameError\u001b[0m: name 'distanceLorentz' is not defined"
      ]
     },
@@ -752,7 +752,10 @@
     "new_sim_wealth = np.concatenate([ThisType.aLvlNow for ThisType in NewTypes])\n",
     "new_dLor = distanceLorentz(SCF_wealth, SCF_weights, new_sim_wealth, evalPctiles)\n",
     "print('\\n The Euclidean distance to the Lorenz curve changed from '  +str(dLor) +' to ' +str(new_dLor) \n",
-    "      +' indicating a better match to the empirical Lorenz curve.')"
+    "      +' indicating a better match to the empirical Lorenz curve.')\n",
+    "\n",
+    "# %% 3. Empirical rejection of \"rational\" consumption models\n",
+    "print('No, we can not reject the hypthesis that hand-to-mouth households arise in the data due to being very impatient.')"
    ]
   },
   {
@@ -762,6 +765,21 @@
     "### PROBLEM -- Plot the new distribution of wealth\n",
     "\n",
     "The $\\texttt{matplotlib}$ library provides plotting functionality that replicates Matlab's plot features (more or less). As an example of how to use it, we have written a few lines of code that plot the empirical vs simulated Lorenz curves.  Write some code that plots the CDF of the MPC before and after adding very impatient households, and plots the DIFFERENCES between the Lorenz curves across the two populations.  Interpret the two graphs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See previous section for the comparison of MPC distributions\n",
+    "new_sim_Lorenz_points = getLorenzShares(new_sim_wealth,percentiles=pctiles)\n",
+    "#newWealthpercentiles = getPercentiles(new_sim_wealth, percentiles = ppercentiles)\n",
+    "\n",
+    "sim_Lorenz_points = getLorenzShares(sim_wealth,percentiles=pctiles)\n",
+    "\n",
+    "plt.plot(pctiles, new_sim_Lorenz_points - sim_Lorenz_points)"
    ]
   }
  ],
