--- a/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-And-Solutions.ipynb
+++ b/notebooks/Micro-and-Macro-Implications-of-Very-Impatient-HHs-Problems-And-Solutions.ipynb
@@ -670,7 +670,8 @@
     "\n",
     "LargerThan7 = np.where(MPCpercentiles_annual>0.70)\n",
     "print(LargerThan7)\n",
-    "print(str(decfmt2((1-percentiles[91])*100)) + ' % are hand to mouth')\n"
+    "print(str(decfmt2((1-percentiles[91])*100)) + ' % are hand to mouth')\n",
+    "# test"
    ]
   },
   {
